# python-flask/swagger_server/models/__init__.py
@@ -3,17 +3,10 @@
 # flake8: noqa
 from __future__ import absolute_import
 # import models into model package
-from swagger_server.models.cloud_credential_db import CloudCredentialDB
-from swagger_server.models.clouds_storm_top_topology import CloudsStormTopTopology
-from swagger_server.models.clouds_storm_v_ms import CloudsStormVMs
+from swagger_server.models.body import Body
+from swagger_server.models.body1 import Body1
 from swagger_server.models.credential import Credential
-from swagger_server.models.credential_info import CredentialInfo
-from swagger_server.models.db import DB
-from swagger_server.models.db_info import DBInfo
-from swagger_server.models.dc_meta_info import DCMetaInfo
 from swagger_server.models.node_template import NodeTemplate
 from swagger_server.models.node_template_map import NodeTemplateMap
-from swagger_server.models.provisioner import Provisioner
 from swagger_server.models.topology_template import TopologyTemplate
 from swagger_server.models.tosca_template import ToscaTemplate
-from swagger_server.models.vm_meta_info import VMMetaInfo
